tests/NormalTests/paczka1/small_fuzzy/61918604.err
Error in line 1: v2Ae9yJi A865 64,7
Error in line 7: A615 A865 13,2
Error in line 9: A615 A615 49,1
Error in line 12: A615 S448 56,4
Error in line 14: v2Ae9yJi A615 52,8
Error in line 8: QtlD A615 8,5
